# necto_demos

./: .gitignore  LICENSE  README.md  demos_legacy.7z
.github/workflows/: demos.yaml
demos/bare_metal/demoblink/project/: CMakeLists.txt  README.md  changelog.md  demoblinkingUtils.cmake  main.c  manifest.json
demos/bare_metal/demoblink/project/renesas/: blinking.c
demos/bare_metal/demoblink/project/renesas/ek_ra2a1/: bm_board.h
demos/bare_metal/demoblink/project/renesas/ek_ra2a2/: bm_board.h
demos/bare_metal/demoblink/project/renesas/ek_ra2e1/: bm_board.h
demos/bare_metal/demoblink/project/renesas/ek_ra2e2/: bm_board.h
demos/bare_metal/demoblink/project/renesas/ek_ra2l1/: bm_board.h
demos/bare_metal/demoblink/project/renesas/ek_ra2l2/: bm_board.h
demos/bare_metal/demoblink/project/renesas/ek_ra4c1/: bm_board.h
demos/bare_metal/demoblink/project/renesas/ek_ra4e2/: bm_board.h
demos/bare_metal/demoblink/project/renesas/ek_ra4l1/: bm_board.h
demos/bare_metal/demoblink/project/renesas/ek_ra4m1/: bm_board.h
demos/bare_metal/demoblink/project/renesas/ek_ra4m2/: bm_board.h
demos/bare_metal/demoblink/project/renesas/ek_ra4m3/: bm_board.h
demos/bare_metal/demoblink/project/renesas/ek_ra4w1/: bm_board.h
demos/bare_metal/demoblink/project/renesas/ek_ra6e2/: bm_board.h
demos/bare_metal/demoblink/project/renesas/ek_ra6m1/: bm_board.h
demos/bare_metal/demoblink/project/renesas/ek_ra6m2/: bm_board.h
demos/bare_metal/demoblink/project/renesas/ek_ra6m3/: bm_board.h
demos/bare_metal/demoblink/project/renesas/ek_ra6m4/: bm_board.h
demos/bare_metal/demoblink/project/renesas/ek_ra6m5/: bm_board.h
demos/bare_metal/demoblink/project/renesas/ek_ra8d1/: bm_board.h
demos/bare_metal/demoblink/project/renesas/ek_ra8e2/: bm_board.h
demos/bare_metal/demoblink/project/renesas/ek_ra8m1/: bm_board.h
demos/bare_metal/demoblink/project/renesas/fpb_ra0e1/: bm_board.h
demos/bare_metal/demoblink/project/renesas/fpb_ra0e2/: bm_board.h
demos/bare_metal/demoblink/project/renesas/fpb_ra0l1/: bm_board.h
demos/bare_metal/demoblink/project/renesas/fpb_ra2e1/: bm_board.h
demos/bare_metal/demoblink/project/renesas/fpb_ra2e2/: bm_board.h
demos/bare_metal/demoblink/project/renesas/fpb_ra2t1/: bm_board.h
demos/bare_metal/demoblink/project/renesas/fpb_ra4e1/: bm_board.h
demos/bare_metal/demoblink/project/renesas/fpb_ra4t1/: bm_board.h
demos/bare_metal/demoblink/project/renesas/fpb_ra6e1/: bm_board.h
demos/bare_metal/demoblink/project/renesas/fpb_ra6t3/: bm_board.h
demos/bare_metal/demoblink/project/renesas/fpb_ra8e1/: bm_board.h
demos/bare_metal/demoblink/project/renesas/mcb_ra6t2/: bm_board.h
demos/bare_metal/demoblink/project/renesas/mcb_ra8t1/: bm_board.h
demos/bare_metal/demoblink/project/unimplemented/: blinking.c
demos/bare_metal/demodualcoreblink/project/: CMakeLists.txt  README.md  changelog.md  manifest.json
demos/bare_metal/demodualcoreblink/project/core_m4/: CMakeLists.txt  main.c
demos/bare_metal/demodualcoreblink/project/core_m7/: CMakeLists.txt  main.c
demos/bare_metal/demomotor/project/: CMakeLists.txt  README.md  changelog.md  demomotorutils.cmake  demomotoutils.cmake  main.c  manifest.json  motor_demo.h
demos/bare_metal/demomotor/project/default/: default.c
demos/bare_metal/demomotor/project/renesas/: ra4m1_clicker.c
demos/sdk/demoanalogin/project/: CMakeLists.txt  main.c  manifest.json
demos/sdk/demoanalogin/project/resources/: changelog.md  details.md
demos/sdk/demobaremetal/project/motor/: CMakeLists.txt  README.md  main.c
demos/sdk/demobaremetalmotor/project/: CMakeLists.txt  README.md  main.c  manifest.json  motor_demo.h
demos/sdk/democan/project/: CMakeLists.txt  README.md  manifest.json
demos/sdk/democan/project/loopback/: CMakeLists.txt  README.md
demos/sdk/democan/project/receive/: CMakeLists.txt  main.c
demos/sdk/democan/project/transmit/: CMakeLists.txt  changelog.md
demos/sdk/democanreceive/Examples/example/: CMakeLists.txt
demos/sdk/democyclonetcp/project/: CMakeLists.txt  README.md  manifest.json
demos/sdk/democyclonetcp/project/echoserver/: CMakeLists.txt  changelog.md
demos/sdk/democyclonetcp/project/ftpclient/: CMakeLists.txt
demos/sdk/democyclonetcp/project/httpclient/: CMakeLists.txt
demos/sdk/democyclonetcpechoserver/Examples/example/: CMakeLists.txt  main.c
demos/sdk/demodesigner/project/: CMakeLists.txt  main.c  main_screen.mscr  manifest.json  resource.mres  second_screen.c  second_screen.h  second_screen.mscr
demos/sdk/demodesigner/project/resources/: details.md
demos/sdk/demodmam2m/project/: CMakeLists.txt  manifest.json
demos/sdk/demodmam2m/project/resources/: details.md
demos/sdk/demogpio/project/: CMakeLists.txt  README.md  manifest.json
demos/sdk/demogpio/project/digitalinputoutput/: CMakeLists.txt  digital_in_out.c  main.c
demos/sdk/demogpio/project/ledblinking/: CMakeLists.txt  README.md
demos/sdk/demogpio/project/ledcurtain/: CMakeLists.txt  changelog.md
demos/sdk/demogpio/project/port/: CMakeLists.txt  changelog.md
demos/sdk/demolcd/project/: CMakeLists.txt  README.md  changelog.md  main.c  manifest.json
demos/sdk/demolcd/project/resources/: changelog.md  details.md
demos/sdk/demoledblinking/Examples/example/: CMakeLists.txt  main.c
demos/sdk/demoledcurtain/Examples/example/: CMakeLists.txt
demos/sdk/demolvglkeyboard/project/: CMakeLists.txt  README.md  changelog.md  main.c  main_screen.c  main_screen.mscr  manifest.json  resource.mres  second_screen.c  second_screen.h  second_screen.mscr
demos/sdk/demolvglkeyboard/project/driver/: display_lvgl.c
demos/sdk/demoplot/project/: CMakeLists.txt  README.md  main.c  manifest.json
demos/sdk/demoport/Examples/example/: CMakeLists.txt  main.c
demos/sdk/demortc/Examples/example/: CMakeLists.txt
demos/sdk/demousb/project/: CMakeLists.txt  README.md  manifest.json
demos/sdk/demousb/project/cdc/: CMakeLists.txt  README.md  changelog.md
demos/sdk/demousb/project/hid/: CMakeLists.txt  README.md  changelog.md
demos/sdk/demousb/project/midi/: CMakeLists.txt  changelog.md  usb_descriptors.c
(+163 files in other folders)
