cmake_minimum_required(VERSION 3.21)
if (${TOOLCHAIN_LANGUAGE} MATCHES "MikroC")
    project(drv_dma_m2m_demo LANGUAGES MikroC)
else()
    project(drv_dma_m2m_demo LANGUAGES C ASM)
endif()

include(mikroeUtils)

add_executable(drv_dma_m2m_demo
    main.c
)

find_package(MikroSDK.Driver.DMA REQUIRED)
target_link_libraries(drv_dma_m2m_demo PUBLIC MikroSDK.Driver.DMA)
find_package(MikroSDK.Driver.GPIO.Out REQUIRED)
target_link_libraries(drv_dma_m2m_demo PUBLIC MikroSDK.Driver.GPIO.Out)
find_package(MikroSDK.Board REQUIRED)
target_link_libraries(drv_dma_m2m_demo PUBLIC MikroSDK.Board)
find_package(MikroC.Core REQUIRED)
target_link_libraries(drv_dma_m2m_demo PUBLIC MikroC.Core)

if(COMPILER_REVISION)
    if(${COMPILER_REVISION} VERSION_GREATER_EQUAL "1.0")
        if(${TOOLCHAIN_LANGUAGE} STREQUAL "GNU")
            if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/.meproject)
                fetch_startup_name(${CMAKE_CURRENT_SOURCE_DIR}/.meproject startupName)
                if(startupName)
                    add_startup_all_targets(. ${CMAKE_CURRENT_SOURCE_DIR} ${startupName})
                endif()
                fetch_linker_name(${CMAKE_CURRENT_SOURCE_DIR}/.meproject linkerName)
                if(linkerName)
                    add_ld_all_targets(. ${CMAKE_CURRENT_SOURCE_DIR} ${linkerName})
                endif()
            endif()
        endif()
    endif()
endif()
